{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 571,
  "lineage": "b88c9cad-706e-cd18-c665-ad63be3d1186",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082fb3d8dc0954afe",
            "domain": "vpc",
            "id": "eipalloc-082fb3d8dc0954afe",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-180-90.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.180.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-EIP-vpc-09277a2e5164d4f94",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-EIP-vpc-09277a2e5164d4f94",
              "Owner": "Yheancarh"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:internet-gateway/igw-0693255c2e35cd10a",
            "id": "igw-0693255c2e35cd10a",
            "owner_id": "811382253948",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-IG-vpc-09277a2e5164d4f94",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-IG-vpc-09277a2e5164d4f94",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:loadbalancer/app/ext-alb/bd9cd59f88dd958a",
            "arn_suffix": "app/ext-alb/bd9cd59f88dd958a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-1825484301.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:loadbalancer/app/ext-alb/bd9cd59f88dd958a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-04f443e6f849c40da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0659c3a6104caa217"
              },
              {
                "subnet_id": "subnet-0f6d46a2f7de0b109"
              }
            ],
            "subnets": [
              "subnet-0659c3a6104caa217",
              "subnet-0f6d46a2f7de0b109"
            ],
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-ext-alb",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-ext-alb",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.ext_alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "int_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:loadbalancer/app/int-alb/51e04afdfa17ba77",
            "arn_suffix": "app/int-alb/51e04afdfa17ba77",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-int-alb-769843292.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:loadbalancer/app/int-alb/51e04afdfa17ba77",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "int-alb",
            "security_groups": [
              "sg-00a3e36cb8f832bd1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ed5f275fa9a51be7"
              },
              {
                "subnet_id": "subnet-0f58574baffb359b3"
              }
            ],
            "subnets": [
              "subnet-0ed5f275fa9a51be7",
              "subnet-0f58574baffb359b3"
            ],
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-int-alb",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-int-alb",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener/app/ext-alb/bd9cd59f88dd958a/24d5ea50f2a17467",
            "certificate_arn": "arn:aws:acm:us-east-2:811382253948:certificate/9e8b8501-bba3-438d-8d54-29b4eb74aaba",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/nginx-tgt/1bab146d347f226d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener/app/ext-alb/bd9cd59f88dd958a/24d5ea50f2a17467",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:loadbalancer/app/ext-alb/bd9cd59f88dd958a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.yheancarh_cert",
            "aws_acm_certificate_validation.yheancarh_cert_val",
            "aws_lb.ext_alb",
            "aws_lb_target_group.nginx_tgt",
            "aws_route53_record.yheancarh_record",
            "aws_security_group.ext_alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.yheancarh_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener/app/int-alb/51e04afdfa17ba77/023f6f53e52615ce",
            "certificate_arn": "arn:aws:acm:us-east-2:811382253948:certificate/9e8b8501-bba3-438d-8d54-29b4eb74aaba",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/wordpress-tgt/9635830f500c5f9c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener/app/int-alb/51e04afdfa17ba77/023f6f53e52615ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:loadbalancer/app/int-alb/51e04afdfa17ba77",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.yheancarh_cert",
            "aws_acm_certificate_validation.yheancarh_cert_val",
            "aws_lb.int_alb",
            "aws_lb_target_group.wordpress_tgt",
            "aws_route53_record.yheancarh_record",
            "aws_security_group.int_alb_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.yheancarh_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/tooling-tgt/eb42e2123ab916b7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener-rule/app/int-alb/51e04afdfa17ba77/023f6f53e52615ce/c08994455fe9c3a9",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.yinkadevops.tk"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener-rule/app/int-alb/51e04afdfa17ba77/023f6f53e52615ce/c08994455fe9c3a9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:listener/app/int-alb/51e04afdfa17ba77/023f6f53e52615ce",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.yheancarh_cert",
            "aws_acm_certificate_validation.yheancarh_cert_val",
            "aws_lb.int_alb",
            "aws_lb_listener.wordpress_listener",
            "aws_lb_target_group.tooling_tgt",
            "aws_lb_target_group.wordpress_tgt",
            "aws_route53_record.yheancarh_record",
            "aws_security_group.int_alb_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.yheancarh_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/nginx-tgt/1bab146d347f226d",
            "arn_suffix": "targetgroup/nginx-tgt/1bab146d347f226d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/nginx-tgt/1bab146d347f226d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling_tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/tooling-tgt/eb42e2123ab916b7",
            "arn_suffix": "targetgroup/tooling-tgt/eb42e2123ab916b7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/tooling-tgt/eb42e2123ab916b7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/wordpress-tgt/9635830f500c5f9c",
            "arn_suffix": "targetgroup/wordpress-tgt/9635830f500c5f9c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811382253948:targetgroup/wordpress-tgt/9635830f500c5f9c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082fb3d8dc0954afe",
            "connectivity_type": "public",
            "id": "nat-0280a39e6f64601fa",
            "network_interface_id": "eni-0614dded35e728708",
            "private_ip": "172.16.0.110",
            "public_ip": "3.143.180.90",
            "subnet_id": "subnet-0f6d46a2f7de0b109",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-NAT-vpc-09277a2e5164d4f94",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-NAT-vpc-09277a2e5164d4f94",
              "Owner": "Yheancarh"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rtb_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0693255c2e35cd10a",
            "id": "r-rtb-0b3a660b049d0e05d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3a660b049d0e05d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:route-table/rtb-0de38effd3ca5e116",
            "id": "rtb-0de38effd3ca5e116",
            "owner_id": "811382253948",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-private-rtb",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-private-rtb",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:route-table/rtb-0b3a660b049d0e05d",
            "id": "rtb-0b3a660b049d0e05d",
            "owner_id": "811382253948",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-public-rtb",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-public-rtb",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f69822e4d19d2b6",
            "route_table_id": "rtb-0de38effd3ca5e116",
            "subnet_id": "subnet-0f58574baffb359b3"
          },
          "dependencies": [
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05279bead68dcfdc6",
            "route_table_id": "rtb-0de38effd3ca5e116",
            "subnet_id": "subnet-0ed5f275fa9a51be7"
          },
          "dependencies": [
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b39cd2d8d0778c6b",
            "route_table_id": "rtb-0de38effd3ca5e116",
            "subnet_id": "subnet-0b45607831f12e92e"
          },
          "dependencies": [
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db3024558b7b5a29",
            "route_table_id": "rtb-0de38effd3ca5e116",
            "subnet_id": "subnet-07f7137c8e2166695"
          },
          "dependencies": [
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd210acda917b5a8",
            "route_table_id": "rtb-0b3a660b049d0e05d",
            "subnet_id": "subnet-0f6d46a2f7de0b109"
          },
          "dependencies": [
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a20daebae2a49118",
            "route_table_id": "rtb-0b3a660b049d0e05d",
            "subnet_id": "subnet-0659c3a6104caa217"
          },
          "dependencies": [
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:security-group/sg-0cb8ff183fae11e96",
            "description": "allow SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb8ff183fae11e96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "811382253948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Bastion-sg",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Bastion-sg",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:security-group/sg-00bd192de17f2b652",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bd192de17f2b652",
            "ingress": [],
            "name": "datalayer_sg",
            "name_prefix": "",
            "owner_id": "811382253948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Datalayer-sg",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Datalayer-sg",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:security-group/sg-04f443e6f849c40da",
            "description": "allow HTTP and HTTPS traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f443e6f849c40da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ext_alb_sg",
            "name_prefix": "",
            "owner_id": "811382253948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Ext-ALB-sg",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Ext-ALB-sg",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:security-group/sg-00a3e36cb8f832bd1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a3e36cb8f832bd1",
            "ingress": [],
            "name": "int_alb_sg",
            "name_prefix": "",
            "owner_id": "811382253948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Int-ALB-sg",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Int-ALB-sg",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:security-group/sg-003a14aa592ad4bda",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003a14aa592ad4bda",
            "ingress": [],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "811382253948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Nginx-sg",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "Nginx-sg",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:security-group/sg-049b1cfe70b3063e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049b1cfe70b3063e1",
            "ingress": [],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "811382253948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "WebServer-sg",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "WebServer-sg",
              "Owner": "Yheancarh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_datalayer_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3101152988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00bd192de17f2b652",
            "self": false,
            "source_security_group_id": "sg-0cb8ff183fae11e96",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ext_alb_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1551800569",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f443e6f849c40da",
            "self": false,
            "source_security_group_id": "sg-0cb8ff183fae11e96",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.ext_alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_int_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3749705333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a3e36cb8f832bd1",
            "self": false,
            "source_security_group_id": "sg-003a14aa592ad4bda",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_int_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3949051563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a3e36cb8f832bd1",
            "self": false,
            "source_security_group_id": "sg-003a14aa592ad4bda",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_nfs_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-4241682926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00bd192de17f2b652",
            "self": false,
            "source_security_group_id": "sg-049b1cfe70b3063e1",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_nginx_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3150533099",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003a14aa592ad4bda",
            "self": false,
            "source_security_group_id": "sg-04f443e6f849c40da",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext_alb_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_nginx_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3415201227",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003a14aa592ad4bda",
            "self": false,
            "source_security_group_id": "sg-04f443e6f849c40da",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext_alb_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_nginx_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4210065571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003a14aa592ad4bda",
            "self": false,
            "source_security_group_id": "sg-0cb8ff183fae11e96",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2285405075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-049b1cfe70b3063e1",
            "self": false,
            "source_security_group_id": "sg-00a3e36cb8f832bd1",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1836348110",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-049b1cfe70b3063e1",
            "self": false,
            "source_security_group_id": "sg-00a3e36cb8f832bd1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int_alb_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_webserver_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1863606628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00bd192de17f2b652",
            "self": false,
            "source_security_group_id": "sg-049b1cfe70b3063e1",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_webserver_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3272403655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-049b1cfe70b3063e1",
            "self": false,
            "source_security_group_id": "sg-0cb8ff183fae11e96",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:subnet/subnet-0f58574baffb359b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f58574baffb359b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811382253948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-1",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-1",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:subnet/subnet-0ed5f275fa9a51be7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed5f275fa9a51be7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811382253948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-2",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-2",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:subnet/subnet-0b45607831f12e92e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b45607831f12e92e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811382253948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-3",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-3",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:subnet/subnet-07f7137c8e2166695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7137c8e2166695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811382253948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-4",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PrivateSubnet-4",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:subnet/subnet-0f6d46a2f7de0b109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6d46a2f7de0b109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811382253948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PublicSubnet-1",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PublicSubnet-1",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:subnet/subnet-0659c3a6104caa217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0659c3a6104caa217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811382253948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PublicSubnet-2",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-PublicSubnet-2",
              "Owner": "Yheancarh"
            },
            "vpc_id": "vpc-09277a2e5164d4f94"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811382253948:vpc/vpc-09277a2e5164d4f94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-07ba436601eb20917",
            "default_route_table_id": "rtb-05caee080440f2066",
            "default_security_group_id": "sg-03efdc63c2495f1da",
            "dhcp_options_id": "dopt-074e4b4f7ae5c9c9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09277a2e5164d4f94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05caee080440f2066",
            "owner_id": "811382253948",
            "tags": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-VPC",
              "Owner": "Yheancarh"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed-by": "Terraform",
              "Name": "yheancarh-VPC",
              "Owner": "Yheancarh"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}